Docs build checked via tox, checks for dead links so removed slack references, replaced by discord Added a CHANGELOG.rst (wip) Cleant the README.rst from sphinx uses (pure rst)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,11 @@
-include docs/conf.py
-include docs/make.bat
-include docs/Makefile
+graft docs
+
 include LICENSE
 include README.rst
 include CONTRIBUTING.rst
+include CHANGELOG.rst
 
 include tox.ini .travis.yml
 
-recursive-include docs *.rst
 recursive-include examples *.py
 recursive-include test *.py *.csv
