--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = check, py27, py35, py36
+envlist = check, py27, py35, py36, docs
 
 [testenv]
 commands = nosetests
@@ -14,12 +14,22 @@ deps =
 
 [testenv:check]
 deps =
+    docutils
     check-manifest
     flake8
+    readme-renderer
+    pygments
     isort
 skip_install = true
 commands =
+    python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
-    flake8 examples iota test setup.py
-    #isort --verbose --check-only --diff --recursive examples iota test setup.py
+    flake8 src tests setup.py
+    #isort --verbose --check-only --diff --recursive src tests setup.py
 
+[testenv:docs]
+deps =
+    -r{toxinidir}/docs/requirements.txt
+commands =
+    sphinx-build {posargs:-E} -b html docs dist/docs
+    sphinx-build -b linkcheck docs dist/docs
